Refactors current code

--- a/project/Battleships/Battleships/Battleships.vcxproj
+++ b/project/Battleships/Battleships/Battleships.vcxproj
@@ -155,6 +155,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Battleships.cpp" />
+    <ClCompile Include="Fibonacci.cpp" />
     <ClCompile Include="RandomTesting.cpp" />
   </ItemGroup>
   <ItemGroup>
