--- a/project/Battleships/Battleships/Battleships.vcxproj
+++ b/project/Battleships/Battleships/Battleships.vcxproj
@@ -156,13 +156,18 @@
   <ItemGroup>
     <ClCompile Include="BattleShipGame.cpp" />
     <ClCompile Include="Battleships.cpp" />
+    <ClCompile Include="Cell.cpp" />
     <ClCompile Include="Fibonacci.cpp" />
     <ClCompile Include="RandomTesting.cpp" />
+    <ClCompile Include="Ship.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BattleShipGame.h" />
+    <ClInclude Include="Cell.h" />
+    <ClInclude Include="CellState.h" />
     <ClInclude Include="Fibonacci.h" />
     <ClInclude Include="RandomTesting.h" />
+    <ClInclude Include="Ship.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
